:bug: Fix button spacing on delete acount modal

--- a/frontend/resources/styles/main/partials/modal.scss
+++ b/frontend/resources/styles/main/partials/modal.scss
@@ -184,6 +184,7 @@
 
   .modal-footer .action-buttons {
     justify-content: space-around;
+    gap: 15px;
   }
 
   .fields-container {
